支持返回类型是  Map 的 Dao 方法